[gd_scene load_steps=4 format=3 uid="uid://4w8ihiseoqde"]

[ext_resource type="Theme" uid="uid://b2pndf3ulfxwh" path="res://scenes/ui/themes/default.tres" id="1_edopi"]
[ext_resource type="Script" path="res://scenes/ui/menus/normal_mode_menu.gd" id="2_kom8w"]
[ext_resource type="PackedScene" uid="uid://b3332wnm6hspr" path="res://scenes/levels/templateLevel.tscn" id="3_jytb4"]

[node name="normalModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_edopi")
script = ExtResource("2_kom8w")
levelFile = ExtResource("3_jytb4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="titleLabel" type="Label" parent="MarginContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Normal mode
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="diffLabel" type="Label" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty
"

[node name="diffSlider" type="HSlider" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 1.0

[node name="speedLabel" type="Label" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Speed
"

[node name="speedSlider" type="HSlider" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="Label3" type="Label" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Size"

[node name="sizeSlider" type="HSlider" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 600.0
max_value = 1200.0
value = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="playBtn" type="Button" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="backBtn" type="Button" parent="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back
"

[connection signal="button_down" from="MarginContainer/VSplitContainer/MarginContainer/VBoxContainer/HBoxContainer/playBtn" to="." method="_on_play_btn_button_down"]
